--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
    <hl>ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</hl> 
-   <p>MANA LAPA</p>
+   <p style="color: aqua;" >MANA LAPA</p>
 </body>
 </html>
