--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <hl>ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</hl> 
-   <p style="color: aqua;" >MANA LAPA</p>
+
+   <h style="color: red;">ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</h> 
+   <p style="color: red;" >MANA LAPA</p>
+   <p style="color: red;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde architecto quisquam atque porro sequi quod possimus cum optio dolorum! Laborum neque quaerat magni eveniet eaque? Pariatur dolorum beatae et deleniti?</p>
+   <input type="number" placeholder="CKI LABA IR MANA LAPA?????????????">
 </body>
 </html>
