edited VERI GUUD design

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</title>
+    <title>СЛАВА УКРАЇНІ!</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-   <h style="color: red;">ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</h> 
+   <h1 style="color: red;">ЩЕ НЕ ВМЕРЛА УКРАЇНИ НІ СЛАВА НІ ВОЛЯ</h1> 
    <p style="color: red;" >MANA LAPA</p>
    <p style="color: red;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde architecto quisquam atque porro sequi quod possimus cum optio dolorum! Laborum neque quaerat magni eveniet eaque? Pariatur dolorum beatae et deleniti?</p>
-   <input type="number" placeholder="CKI LABA IR MANA LAPA?????????????">
+   <input type="number" placeholder="CIK LABA IR MANA LAPA?????????????">
+   <p>(c) 2020 shitDesign</p>
 </body>
 </html>
